css/app.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
    font-family: 'Coda', cursive;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}

/*
 * Styles for the deck of cards
 */

.deck {
    width: 660px;
    min-height: 680px;
    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
    padding: 32px;
    border-radius: 10px;
    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 3em;
}

.deck .card {
    height: 125px;
    width: 125px;
    background: #2e3d49;
    font-size: 0;
    color: #ffffff;
    border-radius: 8px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
}

.deck .card.open {
    transform: rotateY(0);
    background: #02b3e4;
    cursor: default;
}

.deck .card.show {
    font-size: 33px;
}

.deck .card.match {
    cursor: default;
    background: #02ccba;
    font-size: 33px;
    pointer-events: none;
}
.fa {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
/*
 * Styles for the Score Panel
 */

.score-panel {
    text-align: left;
    width: 345px;
    margin-bottom: 10px;
}

.score-panel .stars {
    margin: 0;
    padding: 0;
    display: inline-block;
    margin: 0 10px 0 0;
}

.score-panel .stars li {
    list-style: none;
    display: inline-block;
}

.score-panel .restart {
    float: right;
    cursor: pointer;
}

.clock {
  float: center;
  padding-left: 50px;
}


/*  modal */

.hide {
  display: none;
}

.overlay {
  position: absolute;
  height: 100%;
  width: 100%;
  background-color: rgba(7, 9, 15, 0.5);
}

.modal-frame {
  display: flex;
  flex-flow: row wrap;
  text-align: center;
  transform: translate(50%, 5%);
  align-items: flex-start;
  border-radius: 5px;
  width: 400px;
  /* height: 500px; */
  background-color: #ECEBE4;
  margin: 0;
}

.title-bg {
  background-color: #ffffff;
  width: 400px;
  height: 80px;
  border-radius: 5px 5px 0px 0px;
  margin: 0;
  /* justify-content: flex-start; */
}

.title{
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;

}

.game-details {
  display: flex;
  flex-flow: column wrap;
  text-align: center;

}

.game-data {
  font-family: 'Open Sans', sans-serif;
  font-weight: 500;
  margin: 20px;
}

.button-actions {
  display: flex;
  justify-content: space-between;
}

.button-replay{
  font-family: 'Open Sans', sans-serif;
  font-weight: 800;
  background-color: #26A96C;
  border: none;
  color: #ffffff;
  padding: 20px 45px;
  font-size: 16px;
  border-radius: 5px;
  cursor: pointer;
  margin: 30px;

}

.button-close{
  font-family: 'Open Sans', sans-serif;
  font-weight: 800;
  background-color: #ffffff;
  border: 1px;
  color: #1D1D1D;
  padding: 20px 45px;
  font-size: 16px;
  border-radius: 5px;
  cursor: pointer;
  margin: 30px;
}

